--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -18,6 +18,7 @@
                 Title : {{ movie.title }} <br />
                 Release date : {{ movie.releaseDate|date('d/m/Y') }}<br />
                 Genre : {{ movie.genre.name }}
+                <img src="{{ moviePosterUrl(movie) }}">
             </div>
         {% endblock %}
     {% endembed %}
